Add bt files and data

--- a/ipynb_test/Sparse MRP.ipynb
+++ b/ipynb_test/Sparse MRP.ipynb
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "from cig_subspace import cig_subspace\n",
+    "from CigSubspace import CigSubspace\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -602,7 +602,7 @@
    },
    "outputs": [],
    "source": [
-    "result = cig_subspace(df_train)"
+    "result = CigSubspace(df_train)"
    ]
   },
   {
